log
Sat 30 Mar 2024 02:49:02 AM UTC: 
 tests:  0|6
total_score: 0/70
748317d
Sat 30 Mar 2024 02:57:28 AM UTC: 
 list.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
07ebde1
Sat 30 Mar 2024 03:02:23 AM UTC: 
 list.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  0|0
a7dc890
Sat 30 Mar 2024 03:03:34 AM UTC: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  2|5
total_score: 15/70
7869b04
Sat 30 Mar 2024 03:05:46 AM UTC: 
 list.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
 tests:  0|0
2ce2b47
Sat 30 Mar 2024 03:07:57 AM UTC: 
 list.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  5|4
total_score: 25/70
8442378
Sat 30 Mar 2024 03:09:27 AM UTC: 
 list.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  6|4
total_score: 25/70
91ceeff
Sat 30 Mar 2024 03:13:04 AM UTC: 
 list.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
 tests:  9|3
total_score: 35/70
8155adb
Sat 30 Mar 2024 09:22:28 PM UTC: 
 list.c | 6 ++++++
 1 file changed, 6 insertions(+)
 tests:  0|0
ca247e2
Sat 30 Mar 2024 09:24:04 PM UTC: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
In file included from test.c:5:
list.c: In function ‘pushFront’:
list.c:67:37: error: ‘return’ with a value, in function returning void [-Werror=return-type]
   67 |   if (list->current == NULL) return NULL;
      |                                     ^~~~
list.c:66:6: note: declared here
   66 | void pushFront(List * list, void * data) {
      |      ^~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
5729d26
